<resources>
    <string name="app_name">Pexels</string>
    <string name="page_title_search_photos">Search</string>
    <string name="page_title_photo_info">Photo</string>
    <string name="no_results">Sorry, There are no results found with entered text</string>
    <string name="try_again">Try again</string>
    <string name="search_hint">Search for a photo</string>
    <string name="shared_label_oops_with_error_message">Oops, Something went wrong</string>
    <string name="shared_label_no_internet_connection">You seem to be offline, please check data connection</string>

    <string name="title_photographer_info"> Photographer Info</string>
    <string name="shared_label_name"> Name</string>
    <string name="shared_label_website_info">Website</string>
    <string name="shared_label_unavailable">Un Available</string>
</resources>