<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.maheshvenkat.pexels.ui.photographer.PhotoInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/header"
            style="@style/Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_photographer_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/nameLabel"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shared_label_name"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/name"
            style="@style/Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.selectedPhoto.photographerName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toTopOf="@id/nameLabel" />

        <TextView
            android:id="@+id/websiteLabel"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_4x"
            android:text="@string/shared_label_website_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/website"
            app:layout_constraintStart_toStartOf="@id/nameLabel"
            app:layout_constraintTop_toBottomOf="@id/nameLabel" />

        <TextView
            android:id="@+id/website"
            style="@style/Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@{viewModel.selectedPhoto.photographerUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/websiteLabel"
            app:layout_constraintTop_toTopOf="@id/websiteLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>